# business-optimisation-app/src/app/models/common/history.ts
@@ -1,0 +1,10 @@
+import { Employee } from '../hr/employee';
+
+export class History{
+    id: number;
+    type: string;
+    date: Date;
+    user: Employee;
+    newInfo: Object;
+    oldInfo: Object;
+}
