# business-optimisation-app/src/app/swagger-client/swagger.yaml
@@ -1,9 +1,22 @@
 swagger: '2.0'
 info:
-  description: test rest api for pms
+  description: REST API for PMS
   version: 1.0.0
   title: PMS
 paths:
+  /facilities-management:
+    get:
+      tags:
+        - facilities-management
+      summary: returns enum with type of department
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/TypeOfDepartmentDTO' 
+              
   /facilities-management/workplaces:
     get:
       tags:
@@ -15,7 +28,8 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/WorkPlace'
+              $ref: '#/definitions/WorkPlaceDTO'
+              
     post:
       tags:
         - facilities-management
@@ -24,8 +38,10 @@ paths:
         '200':
           description: successful operation
           schema:
-            $ref: '#/definitions/WorkPlace'
-  '/facilities-management/workplaces/{workplaceId}':
+            $ref: '#/definitions/WorkPlaceDTO'
+            
+            
+  /facilities-management/workplaces/{workplaceId}:
     get:
       tags:
         - facilities-management
@@ -41,9 +57,10 @@ paths:
         '200':
           description: successful operation
           schema:
-            $ref: '#/definitions/WorkPlace'
+            $ref: '#/definitions/WorkPlaceDTO'
         '405':
           description: invalid input
+          
     put:
       tags:
         - facilities-management
@@ -60,6 +77,7 @@ paths:
           description: successful operation
         '405':
           description: invalid input
+          
     delete:
       tags:
         - facilities-management
@@ -76,8 +94,246 @@ paths:
           description: successful operation
         '405':
           description: invalid input
+          
+        
+  /facilities-management/workareas:
+    get:
+      tags:
+        - facilities-management
+      summary: returns array of workarea
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/WorkAreaDTO'
+              
+    post:
+      tags:
+        - facilities-management
+      summary: create a new workarea
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/WorkAreaDTO'
+            
+            
+  /facilities-management/workareas/{workareaId}:
+    get:
+      tags:
+        - facilities-management
+      summary: return workarea by Id
+      parameters:
+        - name: workareaId
+          in: path
+          description: Id of workarea that needs to be return
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/WorkAreaDTO'
+        '405':
+          description: invalid input
+          
+    put:
+      tags:
+        - facilities-management
+      summary: update workarea by Id
+      parameters:
+        - name: workareaId
+          in: path
+          description: Id of workarea that needs to be update
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+        '405':
+          description: invalid input
+          
+    delete:
+      tags:
+        - facilities-management
+      summary: delete workarea by Id
+      parameters:
+        - name: workareaId
+          in: path
+          description: Id of workarea that needs to be delete
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+        '405':
+          description: invalid input  
+          
+  
+  /facilities-management/departments:
+    get:
+      tags:
+        - facilities-management 
+      summary: returns array of department
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/DepartmentDTO'
+              
+    post:
+      tags:
+        - facilities-management
+      summary: create a new department
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/DepartmentDTO'
+            
+            
+  /facilities-management/departments/{departmentId}:
+    get:
+      tags:
+        - facilities-management
+      summary: return department by Id
+      parameters:
+        - name: departmentId
+          in: path
+          description: Id of department that needs to be return
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/DepartmentDTO'
+        '405':
+          description: invalid input
+          
+    put:
+      tags:
+        - facilities-management
+      summary: update department by Id
+      parameters:
+        - name: departmentId
+          in: path
+          description: Id of department that needs to be update
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+        '405':
+          description: invalid input
+          
+    delete:
+      tags:
+        - facilities-management
+      summary: delete department by Id
+      parameters:
+        - name: departmentId
+          in: path
+          description: Id of department that needs to be delete
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+        '405':
+          description: invalid input  
+          
+  /facilities-management/locations:
+    get:
+      tags:
+        - facilities-management 
+      summary: returns array of location
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/LocationDTO'
+              
+    post:
+      tags:
+        - facilities-management
+      summary: create a new location
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/LocationDTO'
+            
+            
+  /facilities-management/locations/{locationId}:
+    get:
+      tags:
+        - facilities-management
+      summary: return location by Id
+      parameters:
+        - name: locationId
+          in: path
+          description: Id of location that needs to be return
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/LocationDTO'
+        '405':
+          description: invalid input
+          
+    put:
+      tags:
+        - facilities-management
+      summary: update location by Id
+      parameters:
+        - name: locationId
+          in: path
+          description: Id of location that needs to be update
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+        '405':
+          description: invalid input
+          
+    delete:
+      tags:
+        - facilities-management
+      summary: delete location by Id
+      parameters:
+        - name: locationId
+          in: path
+          description: Id of location that needs to be delete
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+        '405':
+          description: invalid input   
+          
+          
 definitions:
-  Address:
+  AddressDTO:
     type: object
     properties:
       id:
@@ -93,24 +349,68 @@ definitions:
       floors:
         type: integer
         format: int32
-  Location:
+  DepartmentDTO:
     type: object
     properties:
       id:
         type: integer
         format: int64
-      location:
-        $ref: '#/definitions/Address'
+      name:
+        type: string
+      type:
+        type: string
+  FacilitiesManagementHistoryDTO:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      type:
+        type: string
+      date:
+        type: string
+        format: date-time  
+      user:
+        type: object
+      newInfo:
+        type: object
+      oldInfo:
+        type: object
+  LocationDTO:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      address:
+        $ref: '#/definitions/AddressDTO'
       comment:
         type: string
-  WorkPlace:
+  TypeOfDepartmentDTO:
+      type: string
+      enum:
+        - Office
+        - Warehouse
+        - PointOfSale
+        - Sweatshop
+  WorkAreaDTO:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      name:
+        type: string
+      department:
+        $ref: '#/definitions/DepartmentDTO'
+  WorkPlaceDTO:
     type: object
     properties:
       id:
         type: integer
         format: int64
       location:
-        $ref: '#/definitions/Location'
+        $ref: '#/definitions/LocationDTO'
       department:
         type: string
       floor:
